Zmiana nazewnictwa i nowy msg
unifikacja nazewnictwa stosowanego w calym projekcie oraz dodanie obslugi zamkniecia lub otwarcia chwytaka pojedyncza koneda

--- a/open_hand_controller/CMakeLists.txt
+++ b/open_hand_controller/CMakeLists.txt
@@ -50,6 +50,7 @@ find_package(catkin REQUIRED COMPONENTS
    FILES
     ros_to_contr.msg 
     contr_to_ros.msg
+    close_hand.msg
  )
  
   include_directories(include ${catkin_INCLUDE_DIRS})
